added annotations to all todos endpoints, had to modify todos model for swag
